--- a/BlazorAppTest/wwwroot/manifest.json
+++ b/BlazorAppTest/wwwroot/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "BlazorAppTest",
-  "short_name": "BlazorAppTest",
+  "name": "TEB Blazor Demo",
+  "short_name": "TEB Blazor Demo",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#03173d",
   "icons": [
     {
-      "src": "icon-512.png",
+      "src": "favicon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
